ci: add dockerfile, compose